--- a/src/style/global.css
+++ b/src/style/global.css
@@ -339,6 +339,7 @@ div {
   background: linear-gradient(0deg, #006699, #33bbff);
   color: white;
   padding: 50px 5%;
+  border-radius: 5px;
 }
 
 @media (min-width: 768px) {
@@ -655,9 +656,11 @@ div {
   min-height: calc(100vh - 100px);
 }
 
-.searchPage .title h1,
-.detailPage .title h1 {
+.searchPage .title,
+.detailPage .title {
   text-align: center;
+  line-height: 1;
+  padding: 20px 0 0;
 }
 
 .searchPage .item,
@@ -748,4 +751,40 @@ div {
 .detailPage .detail .content .text div {
   opacity: 0.9;
   margin: 10px 0;
+}
+
+.searchPage {
+  width: 100%;
+  overflow: hidden;
+}
+
+.searchPage .searchPage_max {
+  display: flex;
+  width: max-content;
+  transition: all 0.5s;
+  transform: translateX(-380px);
+}
+
+.searchPage .searchPage_max .search_tool_div {
+  width: 365px;
+}
+
+.searchPage .searchPage_max .result_div {
+  width: calc(100vw);
+  overflow: hidden;
+}
+
+.searchPage .searchPage_max_open {
+  transform: translateX(0);
+}
+
+@media (min-width: 768px) {
+  .searchPage .searchPage_max {
+    transform: translateX(0);
+    width: 100%;
+  }
+  .searchPage .searchPage_max .result_div {
+    width: calc(100% - 365px);
+    margin: 0 auto;
+  }
 }
