--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,6 +1,6 @@
 :root {
     --background: #e6f7ff;
-    --main: #006699;
+    --main: #2D66D3;
     --second: #33bbff;
 }
 
@@ -257,7 +257,7 @@ div {
                 width: 135px;
                 display: flex;
                 padding: 5px;
-                font-size: 0.95rem;
+                font-size: 0.90rem;
 
                 svg {
                     margin: 7.5px 2.5px;
@@ -377,8 +377,15 @@ div {
                     .content_text {
                         margin: 10px 0;
                         font-weight: normal;
+                        height: 150px;
+                        overflow: hidden;
                         opacity: 1;
                         line-height: 1.75;
+                        letter-spacing: 0.5px;
+
+                        h1 {
+                            font-size: 1.1rem;
+                        }
                     }
                 }
             }
