--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -335,6 +335,9 @@ div {
         }
 
         .items {
+
+            padding-bottom: 20px;
+
             .item {
                 box-shadow: 0px 0px 5px #aaa;
                 border-radius: 5px;
