--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -29,7 +29,7 @@ div {
 
 .searchTool {
     width: 100%;
-    background: linear-gradient(0deg, #006699, #33bbff);
+    background: linear-gradient(0deg, #2D66D3, #5CBCE0);
     color: white;
     padding: 50px 5%;
     border-radius: 5px;
