--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,7 +1,9 @@
 :root {
-    --background: #e6f7ff;
-    --main: #2d66d3npm;
-    --second: #33bbff;
+    --background: #fdefcd;
+    // --background: #e6f7ff;
+    --main: #2d66d3;
+    --second: #e0f1ff;
+    --title: #c26b4a;
 }
 
 @import './grid.scss';
@@ -10,9 +12,17 @@
     margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+    line-height: 1.35;
+}
+
 body {
     background-color: var(--background);
-
+    color: #444;
 }
 
 div {
@@ -28,135 +38,136 @@ div {
 }
 
 .searchTool {
-    width: 100%;
-    background: linear-gradient(0deg, #2D66D3, #5CBCE0);
-    color: white;
-    padding: 50px 5%;
     border-radius: 5px;
-
-    @media (min-width:768px) {
-        max-width: 375px;
-    }
 
     .title {
         width: max-content;
-        border-bottom: 1px solid;
         margin: 15px 0;
         line-height: 1.25;
+        font-weight: 500;
+
+        h2 {
+            color: #2d66d3 !important;
+        }
+
+        h1 {
+            font-weight: 500;
+            border-left: 2px solid;
+            height: 40px;
+            padding: 0 5px;
+            line-height: 55px;
+            border-color: var(--main) !important;
+        }
     }
 
-    .selectbox {
-        margin: 10px 0;
-        max-width: 375px;
-        position: relative;
+    .grid_box {
+        width: 90%;
+        margin: auto;
 
-        li {
-            font-weight: bold;
-            font-size: 1.5rem;
-        }
+        .selectbox {
+            margin: 10px;
+            position: relative;
 
-        li::marker {
-            display: none !important;
-        }
+            select {
+                width: 100%;
+                height: 60px;
+                font-size: 1.1rem;
+                border: none;
+                box-shadow: 1px 1px 5px 0px #888;
+                border-radius: 5px;
 
-        select {
-            width: 100%;
-            height: 40px;
-            font-size: 1.1rem;
-
-            option {
-                z-index: 0;
-            }
-        }
-
-        p {
-            margin-right: 10px;
-        }
-
-        .area {
-            display: block;
-            position: absolute;
-            top: 50px;
-            left: 0;
-            background-color: var(--background);
-            color: black;
-            min-width: 100%;
-            max-width: 500px;
-            width: calc(100vw - 70px);
-            box-shadow: 0px 0px 5px #888;
-            border-radius: 5px;
-            padding: 1px;
-            z-index: 5;
-
-            .area_titles {
-                width: 100px;
-
-                .area_title {
-                    background-color: white;
-                    margin: 1px;
-                    height: 30px;
-                    line-height: 40px;
-                    padding: 0px 2.5px;
-                    cursor: pointer;
-                }
-
-                .area_title_select {
-                    border-right: 2px solid var(--second);
-                    font-weight: 600;
-                    color: var(--second);
+                option {
+                    z-index: 0;
                 }
             }
 
-            .area_children {
-                margin: 1px;
-                background-color: white;
-                width: calc(100% - 100px);
-                padding: 0 5px;
+            p {
+                margin-right: 10px;
+            }
 
-                p {
-                    display: flex;
+            .area {
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-color: var(--second);
+                color: #133b3a;
+                width: 100%;
+                box-shadow: 0px 0px 5px #888;
+                border-radius: 5px;
+                padding: 1px;
+                z-index: 5;
 
-                    svg {
-                        width: 20px;
-                        height: 20px;
+                .area_titles {
+                    width: 100px;
+
+                    .area_title {
+                        background-color: white;
                         margin: 1px;
-                        position: inherit;
-                        opacity: 0.5;
+                        height: 30px;
+                        line-height: 40px;
+                        padding: 0px 2.5px;
+                        cursor: pointer;
+
+                        p {
+                            height: 30px;
+                            line-height: 40px;
+                        }
+                    }
+
+                    .area_title_select {
+                        border-right: 2px solid var(--main);
+                        font-weight: 600;
+                        color: var(--main);
                     }
                 }
+
+                .area_children {
+                    margin: 1px;
+                    background-color: white;
+                    width: calc(100% - 100px);
+                    padding: 0 5px;
+
+                    p {
+                        display: flex;
+
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                            margin: 1px;
+                            position: inherit;
+                            opacity: 0.5;
+                        }
+                    }
+                }
+
+                svg {
+                    position: absolute;
+                    top: 0px;
+                    right: 0px;
+                }
             }
 
-            svg {
-                position: absolute;
-                top: 0px;
-                right: 0px;
+            .area_none {
+                display: none;
             }
-        }
-
-        .area_none {
-            display: none;
         }
     }
 
-    button {
-        width: 100px;
-        height: 30px;
-        background-color: white;
+
+    .button_search {
+        width: max-content;
+        height: max-content;
         margin: 20px auto;
-        color: var(--main);
-        font-size: 1rem;
-        border: inherit;
-        cursor: pointer;
-        box-shadow: 0px 0px 5px #222;
-        border-radius: 5px;
-        font-weight: bold;
+        transform: scale(1.5);
     }
 
+    @media (min-width:768px) {}
 }
 
 .header {
     height: 100px;
-    background-color: white;
+    background-color: rgba($color: #fff, $alpha: 0.75);
 
     .title {
         width: max-content;
@@ -174,7 +185,7 @@ div {
         height: 100vh;
         top: 0;
         right: 0;
-        background: white;
+        // background: var(--background);
         font-size: 1.1rem;
         color: var(--main);
         text-align: center;
@@ -216,7 +227,7 @@ div {
         }
 
         p:hover {
-            color: var(--second);
+            color: #133b3a;
         }
 
         .header_input {
@@ -226,16 +237,28 @@ div {
             margin: 5px auto;
 
             input {
-                margin: 0 5px;
+                margin: 0;
+                border: none;
+                color: inherit;
+                background-color: rgba($color: #000000, $alpha: 0.025);
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
+                padding: 0 10px;
+            }
+
+            input:focus {
+                outline: none
             }
 
             svg {
                 box-sizing: border-box;
                 width: 35px;
                 height: 35px;
-                padding: 1px;
+                padding: 7.5px;
                 background: var(--main);
                 color: white;
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
             }
         }
     }
@@ -258,16 +281,17 @@ div {
             width: max-content;
             height: max-content;
             position: inherit;
-            background: inherit;
             flex-direction: inherit;
             justify-content: inherit;
-            margin: -5px 0 0 auto;
+            margin: -10px 0 0 auto;
+            background: transparent;
 
             p {
                 width: max-content;
                 display: flex;
-                padding: 5px 10px;
-                font-size: 0.90rem;
+                padding: 2.5px 10px;
+                font-size: 0.8rem;
+                font-weight: bold;
 
                 svg {
                     margin: 7.5px 2.5px;
@@ -290,11 +314,11 @@ div {
                     left: 0;
                     z-index: 2;
                     position: absolute;
-                    background-color: var(--background);
+                    background-color: white;
                 }
 
                 .children_on {
-                    height: calc(6 * 46px);
+                    height: calc(6 * 41px);
                 }
             }
         }
@@ -417,6 +441,223 @@ div {
 
 }
 
+.contain_V2 {
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
+
+    .cover {
+        display: flex;
+        height: calc(100vh - 100px);
+        overflow: hidden;
+        position: relative;
+
+        .cover_left {
+            height: 100%;
+            width: 50%;
+            background: rgba($color: #000000, $alpha: 0.5) url("/img/cover3.jpg") no-repeat center;
+            background-size: cover;
+            cursor: pointer;
+            transition: all 0.5s;
+        }
+
+        .cover_right {
+            height: 100%;
+            width: 50%;
+            background: rgba($color: #000000, $alpha: 0.5) url("/img/cover2.jpg") no-repeat center;
+            background-size: cover;
+            cursor: pointer;
+            transition: all 0.5s;
+        }
+
+        .cover_hover {
+            transform: scale(1.01);
+        }
+
+        .cover_dark_hover {
+            background-blend-mode: color;
+        }
+
+        .cover_title {
+            position: absolute;
+            bottom: 0;
+            width: 49vw;
+            max-width: max-content;
+            right: 0;
+            height: max-content;
+            padding: 20px;
+            background-color: rgba($color: #fdefcc, $alpha: 0.8);
+            box-shadow: 0px 0px 10px #888;
+            transition: all 0.5s;
+            transform: translateY(100%);
+
+            h3 {
+                color: var(--title);
+                margin: 20px 0px 25px;
+            }
+
+            h4 {
+                font-size: 1rem;
+                opacity: 0.9;
+            }
+        }
+
+        .cover_title_hover {
+            transform: translateY(0%);
+        }
+    }
+
+    .slogan {
+        font-size: calc(3vw + 10px);
+        text-align: center;
+        position: absolute;
+        top: 30vh;
+        width: 100%;
+        text-shadow: 1px 1px 3px #444;
+        color: #f1f5f7;
+        transition: all 1s;
+
+        h2 {
+            letter-spacing: 10px;
+            line-height: 1.5;
+        }
+    }
+
+    .slogan_hover {
+        transform: translateY(calc(300px + 30vh));
+    }
+
+    .about {
+        min-height: 400px;
+        padding-top: 400px;
+        background-color: rgba($color: #fff, $alpha: 0.5);
+        padding-bottom: 100px;
+
+        p {
+            width: 90%;
+            margin: auto;
+            font-weight: normal;
+            letter-spacing: 2px;
+            text-align: center;
+        }
+
+        .buttons {
+            width: 90%;
+            display: flex;
+            max-width: 575px;
+            margin: 100px auto 0;
+        }
+    }
+
+    .div_items {
+        min-height: 100vh;
+        padding: 10% 0;
+
+        .title {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            position: relative;
+
+            h2 {
+                color: #ee827d;
+            }
+
+            h1 {
+                color: #133b3a;
+                font-weight: 500;
+                padding: 0 5px;
+                border-left: 3px solid #ee827d;
+                height: 40px;
+                line-height: 60px;
+            }
+
+            .title_button {
+                width: max-content;
+                margin: 10px 0;
+            }
+
+        }
+
+        .items {
+            width: 90%;
+            margin: 50px auto;
+            max-width: 1200px;
+
+            .item {
+                width: 100%;
+                padding: 1% 1% 2%;
+
+                .cover {
+                    width: 100%;
+                    height: 300px;
+                    position: relative;
+                }
+
+                .item_title {
+                    margin-top: 20px;
+
+                    h4 {
+                        opacity: 0.75;
+                    }
+
+                    .tag {
+                        display: flex;
+
+                        p {
+                            width: 75px;
+                            height: 30px;
+                            line-height: 40px;
+                            background-color: white;
+                            border-radius: 15px;
+                            padding: 0 15px;
+                            text-align: center;
+                            margin: 0 5px 0 0;
+                        }
+
+                        svg {
+                            border-radius: 50%;
+                            background-color: white;
+                            width: 30px;
+                            height: 30px;
+                            margin: 0 0 0 auto;
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+
+    .div_items_bg_none {
+        background-color: rgba($color: #fff, $alpha: 0.75);
+    }
+
+    .div_items_bg_blue {
+        background-color: var(--second)
+    }
+
+    @media (min-width:768px) {
+        .div_items {
+            .title {
+                .title_button {
+                    margin: -40px 10px auto auto;
+                }
+            }
+
+            .items {
+                display: flex;
+
+                .item {
+                    width: 50%;
+                    padding: 2%;
+                }
+
+            }
+        }
+    }
+}
+
 .footer {
     background-color: white;
     padding: 10px;
@@ -445,7 +686,6 @@ div {
 
 .searchPage,
 .detailPage {
-    padding: 5px;
     min-height: calc(100vh - 100px);
 
     .title {
@@ -517,7 +757,7 @@ div {
 
             .text {
                 margin: 15px 0;
-                text-align: justify;
+                text-align: left;
 
                 h1 {
                     font-size: 100%;
@@ -533,50 +773,30 @@ div {
 }
 
 .searchPage {
-    width: 100%;
-    overflow: hidden;
+    background-color: var(--second);
+
+    .div_items_bg_blue {
+        padding: 50px 0;
+
+        .title {
+            margin: 0;
+            width: 90%;
+            margin: auto;
+            max-width: 1200px;
+            text-align: left;
+        }
+
+        h2 {
+            color: #457cea !important;
+        }
+
+        h1 {
+            border-color: #457cea !important;
+        }
+    }
 
     .searchPage_max {
-        display: flex;
-        width: max-content;
-        transition: all 0.5s;
-        transform: translateX(-380px);
-
-        .search_tool_div {
-            width: 365px;
-            position: relative;
-        }
-
-        .result_div {
-            width: calc(100vw);
-            overflow: hidden;
-            position: relative;
-
-            .button_Search {
-                width: max-content;
-                margin: 0px auto 25px;
-            }
-        }
-    }
-
-    .searchPage_max_open {
-        transform: translateX(0);
-
-    }
-
-    @media (min-width:768px) {
-        .searchPage_max {
-            transform: translateX(0);
-            width: 100%;
-
-            .button_Search {
-                display: none;
-            }
-
-            .result_div {
-                width: calc(100% - 365px);
-                margin: 0 auto;
-            }
-        }
+        padding: 10px 0;
+        min-height: 100vh;
     }
 }
