--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -143,8 +143,10 @@ div {
 
                 svg {
                     position: absolute;
-                    top: 0px;
-                    right: 0px;
+                    width: 30px;
+                    height: 30px;
+                    top: 15px;
+                    right: 5px;
                 }
             }
 
@@ -550,8 +552,8 @@ div {
     }
 
     .div_items {
-        min-height: 100vh;
-        padding: 10% 0;
+        min-height: 105vh;
+        padding: 5% 0;
 
         .title {
             width: 90%;
