--- a/src/style/global.css
+++ b/src/style/global.css
@@ -374,7 +374,8 @@ div {
 
 .searchTool .grid_box {
   width: 90%;
-  margin: auto;
+  max-width: 1200px;
+  margin: 50px auto;
 }
 
 .searchTool .grid_box .selectbox {
@@ -421,7 +422,7 @@ div {
   background-color: white;
   margin: 1px;
   height: 30px;
-  line-height: 40px;
+  line-height: 30px;
   padding: 0px 2.5px;
   cursor: pointer;
 }
@@ -451,7 +452,7 @@ div {
 .searchTool .grid_box .selectbox .area .area_children p svg {
   width: 20px;
   height: 20px;
-  margin: 1px;
+  margin: 2.5px;
   position: inherit;
   opacity: 0.5;
 }
@@ -496,6 +497,7 @@ div {
   height: 100vh;
   top: 0;
   right: 0;
+  background: var(--background);
   font-size: 1.1rem;
   color: var(--main);
   text-align: center;
@@ -524,7 +526,7 @@ div {
 
 .header .menu p {
   cursor: pointer;
-  line-height: 50px;
+  line-height: 36px;
   height: 36px;
   text-align: center;
 }
@@ -602,7 +604,7 @@ div {
     font-weight: bold;
   }
   .header .menu p svg {
-    margin: 7.5px 2.5px;
+    margin: 5px;
   }
   .header .menu .header_input {
     margin: 5px;
@@ -736,7 +738,6 @@ div {
 
 .contain_V2 {
   overflow-x: hidden;
-  position: relative;
   width: 100%;
 }
 
@@ -781,10 +782,11 @@ div {
   right: 0;
   height: max-content;
   padding: 20px;
-  background-color: rgba(253, 239, 204, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0px 0px 10px #888;
   transition: all 0.5s;
   transform: translateY(100%);
+  cursor: pointer;
 }
 
 .contain_V2 .cover .cover_title h3 {
@@ -805,20 +807,30 @@ div {
   font-size: calc(3vw + 10px);
   text-align: center;
   position: absolute;
-  top: 30vh;
+  top: 50vh;
   width: 100%;
+  max-width: 1600px;
+  height: 90vh;
+  max-height: 800px;
   text-shadow: 1px 1px 3px #444;
   color: #f1f5f7;
-  transition: all 1s;
 }
 
-.contain_V2 .slogan h2 {
+.contain_V2 .slogan .slogan_box {
+  position: sticky;
+  height: 150px;
+  top: 50vh;
+}
+
+.contain_V2 .slogan .slogan_box h2 {
   letter-spacing: 10px;
   line-height: 1.5;
 }
 
-.contain_V2 .slogan_hover {
-  transform: translateY(calc(300px + 30vh));
+@media (min-width: 1200px) {
+  .contain_V2 .slogan {
+    font-size: 40px;
+  }
 }
 
 .contain_V2 .about {
@@ -845,7 +857,7 @@ div {
 
 .contain_V2 .div_items {
   min-height: 105vh;
-  padding: 5% 0;
+  padding: 5% 0 0;
 }
 
 .contain_V2 .div_items .title {
@@ -865,7 +877,8 @@ div {
   padding: 0 5px;
   border-left: 3px solid #ee827d;
   height: 40px;
-  line-height: 60px;
+  line-height: 40px;
+  margin: 5px 0;
 }
 
 .contain_V2 .div_items .title .title_button {
@@ -875,13 +888,14 @@ div {
 
 .contain_V2 .div_items .items {
   width: 90%;
-  margin: 50px auto;
+  margin: 50px auto 0;
   max-width: 1200px;
 }
 
 .contain_V2 .div_items .items .item {
   width: 100%;
   padding: 1% 1% 2%;
+  margin-bottom: 50px;
 }
 
 .contain_V2 .div_items .items .item .cover {
@@ -900,12 +914,13 @@ div {
 
 .contain_V2 .div_items .items .item .item_title .tag {
   display: flex;
+  margin-top: 15px;
 }
 
 .contain_V2 .div_items .items .item .item_title .tag p {
   width: 75px;
   height: 30px;
-  line-height: 40px;
+  line-height: 30px;
   background-color: white;
   border-radius: 15px;
   padding: 0 15px;
