--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -62,7 +62,8 @@ div {
 
     .grid_box {
         width: 90%;
-        margin: auto;
+        max-width: 1200px;
+        margin: 50px auto;
 
         .selectbox {
             margin: 10px;
@@ -105,7 +106,7 @@ div {
                         background-color: white;
                         margin: 1px;
                         height: 30px;
-                        line-height: 40px;
+                        line-height: 30px;
                         padding: 0px 2.5px;
                         cursor: pointer;
 
@@ -134,7 +135,7 @@ div {
                         svg {
                             width: 20px;
                             height: 20px;
-                            margin: 1px;
+                            margin: 2.5px;
                             position: inherit;
                             opacity: 0.5;
                         }
@@ -187,7 +188,7 @@ div {
         height: 100vh;
         top: 0;
         right: 0;
-        // background: var(--background);
+        background: var(--background);
         font-size: 1.1rem;
         color: var(--main);
         text-align: center;
@@ -217,7 +218,7 @@ div {
 
         p {
             cursor: pointer;
-            line-height: 50px;
+            line-height: 36px;
             height: 36px;
             text-align: center;
 
@@ -296,7 +297,7 @@ div {
                 font-weight: bold;
 
                 svg {
-                    margin: 7.5px 2.5px;
+                    margin: 5px;
                 }
             }
 
@@ -445,7 +446,7 @@ div {
 
 .contain_V2 {
     overflow-x: hidden;
-    position: relative;
+    // position: relative;
     width: 100%;
 
     .cover {
@@ -488,10 +489,11 @@ div {
             right: 0;
             height: max-content;
             padding: 20px;
-            background-color: rgba($color: #fdefcc, $alpha: 0.8);
+            background-color: rgba($color: white, $alpha: 0.9);
             box-shadow: 0px 0px 10px #888;
             transition: all 0.5s;
             transform: translateY(100%);
+            cursor: pointer;
 
             h3 {
                 color: var(--title);
@@ -513,20 +515,29 @@ div {
         font-size: calc(3vw + 10px);
         text-align: center;
         position: absolute;
-        top: 30vh;
+        top: 50vh;
         width: 100%;
+        max-width: 1600px;
+        height: 90vh;
+        max-height: 800px;
         text-shadow: 1px 1px 3px #444;
         color: #f1f5f7;
-        transition: all 1s;
 
-        h2 {
-            letter-spacing: 10px;
-            line-height: 1.5;
+        .slogan_box {
+
+            position: sticky;
+            height: 150px;
+            top: 50vh;
+
+            h2 {
+                letter-spacing: 10px;
+                line-height: 1.5;
+            }
         }
-    }
 
-    .slogan_hover {
-        transform: translateY(calc(300px + 30vh));
+        @media (min-width:1200px) {
+            font-size: 40px;
+        }
     }
 
     .about {
@@ -553,7 +564,7 @@ div {
 
     .div_items {
         min-height: 105vh;
-        padding: 5% 0;
+        padding: 5% 0 0;
 
         .title {
             width: 90%;
@@ -571,7 +582,8 @@ div {
                 padding: 0 5px;
                 border-left: 3px solid #ee827d;
                 height: 40px;
-                line-height: 60px;
+                line-height: 40px;
+                margin: 5px 0;
             }
 
             .title_button {
@@ -583,12 +595,13 @@ div {
 
         .items {
             width: 90%;
-            margin: 50px auto;
+            margin: 50px auto 0;
             max-width: 1200px;
 
             .item {
                 width: 100%;
                 padding: 1% 1% 2%;
+                margin-bottom: 50px;
 
                 .cover {
                     width: 100%;
@@ -605,11 +618,12 @@ div {
 
                     .tag {
                         display: flex;
+                        margin-top: 15px;
 
                         p {
                             width: 75px;
                             height: 30px;
-                            line-height: 40px;
+                            line-height: 30px;
                             background-color: white;
                             border-radius: 15px;
                             padding: 0 15px;
