--- a/src/style/global.css
+++ b/src/style/global.css
@@ -744,6 +744,7 @@ div {
 .contain_V2 .cover {
   display: flex;
   height: calc(100vh - 100px);
+  max-height: 700px;
   overflow: hidden;
   position: relative;
 }
@@ -810,8 +811,8 @@ div {
   top: 50vh;
   width: 100%;
   max-width: 1600px;
-  height: 90vh;
-  max-height: 800px;
+  height: 100vh;
+  max-height: 600px;
   text-shadow: 1px 1px 3px #444;
   color: #f1f5f7;
 }
@@ -830,6 +831,13 @@ div {
 @media (min-width: 1200px) {
   .contain_V2 .slogan {
     font-size: 40px;
+  }
+}
+
+@media (min-width: 1600px) {
+  .contain_V2 .slogan {
+    width: max-content;
+    left: calc(50vw - 280px);
   }
 }
 
@@ -856,8 +864,9 @@ div {
 }
 
 .contain_V2 .div_items {
-  min-height: 105vh;
+  height: 105vh;
   padding: 5% 0 0;
+  max-height: 700px;
 }
 
 .contain_V2 .div_items .title {
