--- a/src/style/global.css
+++ b/src/style/global.css
@@ -808,11 +808,11 @@ div {
   font-size: calc(3vw + 10px);
   text-align: center;
   position: absolute;
-  top: 50vh;
+  top: 0px;
   width: 100%;
   max-width: 1600px;
-  height: 100vh;
-  max-height: 600px;
+  height: 140vh;
+  max-height: 1100px;
   text-shadow: 1px 1px 3px #444;
   color: #f1f5f7;
 }
@@ -820,7 +820,7 @@ div {
 .contain_V2 .slogan .slogan_box {
   position: sticky;
   height: 150px;
-  top: 50vh;
+  top: 350px;
 }
 
 .contain_V2 .slogan .slogan_box h2 {
