--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -513,12 +513,12 @@ div {
     }
 
     .slogan {
-        font-size: calc(3vw + 10px);
+        font-size: 20px;
         text-align: center;
         position: absolute;
         top: 0px;
-        width: 100%;
-        max-width: 1600px;
+        left: calc(50vw - 160px);
+        width: max-content;
         height: 140vh;
         max-height: 1100px;
         text-shadow: 1px 1px 3px #444;
@@ -536,12 +536,26 @@ div {
             }
         }
 
-        @media (min-width:1200px) {
-            font-size: 40px;
+        @media (min-width:575px) {
+            font-size: 25px;
+            left: calc(50vw - 190px);
+
         }
 
-        @media (min-width:1600px) {
-            width: max-content;
+        @media (min-width:768px) {
+            font-size: 30px;
+            left: calc(50vw - 220px);
+
+        }
+
+        @media (min-width:992px) {
+            font-size: 35px;
+            left: calc(50vw - 250px);
+
+        }
+
+        @media (min-width:1200px) {
+            font-size: 40px;
             left: calc(50vw - 280px);
         }
     }
